# shredwatch

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  plot.py
proto/jito/: auth.proto  shared.proto  shredstream.proto
proto/yellowstone/: geyser.proto  solana-storage.proto
src/: config.rs  main.rs  registry.rs  shred.rs  stats.rs
src/output/: logfile.rs  mod.rs  table.rs
src/sources/: doublezero.rs  jito.rs  mod.rs  pcap.rs  raw_udp.rs  yellowstone.rs
