[package]
name = "shredwatch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shredwatch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dashmap = "5"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
socket2 = { version = "0.5", features = ["all"] }
tabled = "0.15"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7", features = ["full"] }
libc = "0.2"
ed25519-dalek = "2"
bs58 = "0.5"

[build-dependencies]
tonic-build = "0.12"
